[metadata]
name = anycubic-uart-wifi
version = 0.0.1
author = Adam Outler
author_email = adamoutler@hackedyour.info
description = Interface for Anycubic Mono X and similar printers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adamoutler/anycubic-python
project_urls =
    Bug Tracker = https://github.com/adamoutler/anycubic-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Communications
    Topic :: Home Automation
    Topic :: Printing
    Topic :: System :: Networking :: Monitoring :: Hardware Watchdog
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
