[metadata]
name = uart-wifi
version = 0.1.5
author = Adam Outler
author_email = adamoutler@hackedyour.info
description = Interface for Anycubic Mono X and similar printers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adamoutler/anycubic-python
project_urls =
    Bug Tracker = https://github.com/adamoutler/anycubic-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Communications
    Topic :: Home Automation
    Topic :: Printing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts=
  ./src/uart_wifi/scripts/monox.py
  ./src/uart_wifi/scripts/fake_printer.py
  ./src/uart_wifi/scripts/monox
  ./src/uart_wifi/scripts/fake_printer



[tool:pytest]
testpaths = tests/
norecursedirs =
    .git
    .tox
    .env
    dist
    build
    migrations
addopts = -ra -q --verbose
python_classes = Test Describe
python_files = test_*.py
python_functions = test_ it_ they_ but_ and_it_
asyncio_mode=auto

[options.packages.find]
where =src

[coverage:run]
concurrency = multiprocessing
